--- a/index.html
+++ b/index.html
@@ -6,22 +6,20 @@
 	<link rel="stylesheet" type="text/css" href="css/print.css" media="print"/>
 	<link rel="shortcut icon" href="http://www.mangrove.com/favicon.ico" type="image/ico"/>
 	<link rel="stylesheet" href="css/chosen.css"/>
-    <style type="text/css" media="all">	
-		.chzn-rtl .chzn-drop { left: -9000px; }
-	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>          
     <script src="js/chosen.jquery.js" type="text/javascript"></script>
 	
 	
 </head>
-<body><div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div></div></div></div>
-	<section id="head-wrap" style="height: 69px;">
-		<div id="head-wrap-inner" style="position: fixed; top: 0px; z-index: 9999;">
+<body>
+	<section id="head-wrap" style="height: 200px;">
+		<div id="head-wrap-inner">
 			<div id="head-inner">
-				<header id="head-header" role="banner">
+				<header id="head-header">
 					<a href="http://www.mangrove.com/" class="logo">Mangrove</a>
 					<div id="nav-wrapper">
-						<nav role="navigation" class="menu">
+						
+						<nav class="menu">
 							<ul>
 								<li><a class="active" href="./Digital Agency   Mangrove_files/Digital Agency   Mangrove.htm">home</a></li>
 								<li><a href="http://www.mangrove.com/en/work">work</a></li>
@@ -50,7 +48,7 @@
 								</select>
 								
 								 <em>Into This</em>        
-								  <select data-placeholder="Choose a Country..." class="chzn-select" style="width:350px;" tabindex="2">
+								  <select data-placeholder="Choose a Country..." class="chzn-select" style="width:350px; z-index: 9999;" tabindex="2" >
 									<option value=""></option> 
 									<option value="United States">United States</option> 
 									<option value="United Kingdom">United Kingdom</option> 
@@ -89,7 +87,7 @@
 							</div>
 						</div>
 					</div>
-					<hr>
+					<hr/>
 				</header>
 				<div id="head-wrap-bottom">
 					<div id="head-wrap-shadow" class="" style="background-position: 0px 0px;"></div>
@@ -98,8 +96,7 @@
 		</div>
 	</section>
 	<div id="wrapper">
-		<section id="main" role="main">
-			
+		<section id="main">			
 				<header class="promo-head">
 				  <article class="intro">
 				    <h1>Creating great experiences for web and mobile</h1>
